add code to mainVM for VideoStream add interface setting add class for VideoStream

--- a/TobiiMVVM/Views/MainWindow.xaml
+++ b/TobiiMVVM/Views/MainWindow.xaml
@@ -4,8 +4,14 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TobiiMVVM.Views"
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
         mc:Ignorable="d"
         Title="Манипулятор" Height="450" Width="800" >
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded" >
+            <i:InvokeCommandAction Command="{Binding Load}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <DockPanel Background="#FF5B6060">
         <!--Меню -->
         <Grid DockPanel.Dock="Top">
@@ -22,12 +28,20 @@
 
         </Grid>
         <!--Подвал -->
-        
-            <ProgressBar DockPanel.Dock="Bottom" Value="69" Height="20" ></ProgressBar>
-        
+
+        <!-- <ProgressBar DockPanel.Dock="Bottom" Value="69" Height="20" ></ProgressBar>-->
+        <Label DockPanel.Dock="Bottom" Content="{Binding Path=CheckCameras}"/>
+
         <!--Основная часть -->
         <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Image   Margin="10"  Grid.Column="0"  Source="{Binding Camera1}"/>
+            <Image   Margin="10"  Grid.Column="1" Source="{Binding Camera2}"/>
             
+
         </Grid>
     </DockPanel>
 </Window>
