--- a/TobiiMVVM/App.xaml
+++ b/TobiiMVVM/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="TobiiMVVM.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TobiiMVVM"
+             xmlns:local="clr-namespace:TobiiMVVM.Views"
+             
             >
     <Application.Resources>
          
