--- a/TobiiMVVM/Views/MainWindow.xaml
+++ b/TobiiMVVM/Views/MainWindow.xaml
@@ -5,10 +5,46 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TobiiMVVM.Views"
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
+        xmlns:tobii="clr-namespace:Tobii.Interaction.Wpf;assembly=Tobii.Interaction.Net"
+        xmlns:models="clr-namespace:TobiiMVVM.Models"
         mc:Ignorable="d"
         Title="Манипулятор" Height="450" Width="800" 
         IsEnabled="{Binding Path=IsEnabled}"
+        
         >
+    <Window.Resources>
+        <Style  x:Key="ButtonControl" TargetType="{x:Type Button}">
+            <Setter Property="IsEnabled" Value="False"/>
+            <Setter Property="Background" Value="#444444"/>
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate  TargetType="{x:Type Button}" >
+                        <Border CornerRadius="15" Background="{TemplateBinding Background}"
+                                BorderThickness="1">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="tobii:Behaviors.HasGaze" Value="True">
+
+                    <Setter Property="Background"  >
+                        <Setter.Value>
+                            <RadialGradientBrush>
+                                <GradientStop Color="#FFD4E2D9" Offset="0.679"/>
+                                <GradientStop Color="#FF05D058" Offset="1"/>
+                            </RadialGradientBrush>
+                        </Setter.Value>
+                    </Setter>
+
+
+                </Trigger>
+
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded" >
             <i:InvokeCommandAction Command="{Binding Load}" />
@@ -39,10 +75,36 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
             <Image   Margin="10"  Grid.Column="0"  Source="{Binding Camera1}"/>
             <Image   Margin="10"  Grid.Column="1" Source="{Binding Camera2}"/>
-            
+            <!--<Button Grid.Column="0" 
+                  tobii:Behaviors.IsGazeAware="True"
+                     tobii:Behaviors.GazeAwareMode="Delayed"
+                     tobii:Behaviors.GazeAwareDelayTime="2000">
+                <i:Interaction.Triggers>
+                    <models:RoutedEventTrigger RoutedEvent="tobii:Behaviors.HasGazeChanged">
+                        <i:InvokeCommandAction Command="{Binding ShowCamera}"/>
+                    </models:RoutedEventTrigger>
+                    
+                </i:Interaction.Triggers>
+
+            </Button>
+            -->
+            <Button Grid.Column="2"
+                    tobii:Behaviors.IsGazeAware="True"
+                     tobii:Behaviors.GazeAwareMode="Delayed"
+                     tobii:Behaviors.GazeAwareDelayTime="2000"
+                 
+                Style="{DynamicResource ButtonControl}"
+                >
+                <i:Interaction.Triggers>
+                    <models:RoutedEventTrigger RoutedEvent= "tobii:Behaviors.HasGazeChanged">
+                        <i:InvokeCommandAction Command="{Binding ShowCamera}"/>
+                    </models:RoutedEventTrigger>
+                </i:Interaction.Triggers>
+            </Button>
 
         </Grid>
     </DockPanel>
